# kokoro

./: BOOK.md  Cargo.toml  README.md
.claude/plans/: purring-brewing-shannon.md
.claude/projects/-Users-edrcikmanoel-Projects-kokoro/memory/: reference_rig_calibration.md
book/: README.md  SUMMARY.md  exercises-guide.md
book/appendices/: appendix-c-architecture.md
book/part-1/: ch01-welcome.md  ch02-ownership.md  ch03-structs.md  ch04-enums.md  ch05-functions.md  ch06-borrowing.md
book/part-4/: ch25b-sprite-pipeline.md
book/part-7/: ch41-axum.md
docs/: art-direction.md  lore.md  monetization.md  mvp.md  next-steps.md  species-evolution-design.md
kokoro-shared/: Cargo.toml
kokoro-shared/src/: biomes.rs  food.rs  genes.rs  lib.rs  shop.rs  species.rs
kokoro-web/: .gitignore  Cargo.toml  README.md
kokoro-web/api/: .env.example  Cargo.toml
kokoro-web/api/src/: error.rs  main.rs  router.rs
kokoro-web/api/src/constants/: auth.rs  errors.rs  mod.rs  routes.rs  server.rs
kokoro-web/api/src/controllers/: auth.rs  biomes.rs  creature.rs  foods.rs  health.rs  mod.rs  shop.rs  species.rs
kokoro-web/api/src/db/: creatures.rs  mod.rs  shop.rs  users.rs
kokoro-web/api/src/middleware/: auth.rs
kokoro-web/api/src/models/: auth.rs  biomes.rs  common.rs  creature.rs  foods.rs  mod.rs  shop.rs  species.rs
kokoro-web/api/src/services/: auth.rs  biomes.rs  creature.rs  foods.rs  mod.rs  shop.rs  species.rs
kokoro-web/ui/: Cargo.toml
kokoro-web/ui/src/: app.rs  lib.rs  main.rs
kokoro-web/ui/src/components/: footer.rs  mod.rs  nav.rs  species_card.rs
kokoro-web/ui/src/pages/: home.rs  login.rs  mod.rs  profile.rs  register.rs  species_detail.rs  species_list.rs
kokoro-web/ui/src/server/: auth.rs  mod.rs
kokoro-web/ui/style/: main.css
prompts/: phase4_neural_network.md  sprits_generation_01 (DALL·E 3).txt  sprits_generation_01 (DALL·E).txt  sprits_generation_01 (Midjourney) copy.txt  sprits_generation_01 (Universal).txt
scripts/: generate_sprites.py  generate_tsubasa_sprites.py  generate_uroko_sprites.py
src/: main.rs
src/audio/: heartbeat.rs  mod.rs  species_sounds.rs  synth.rs  ui_sounds.rs  voice_composer.rs  wav.rs
src/config/: abilities.rs  absence.rs  anatomy.rs  audio.rs  autonomic.rs  biology.rs  communication.rs  disease.rs  environment.rs  hygiene.rs  lifecycle.rs  mod.rs  nervous_system.rs  nutrition.rs  physics.rs  shop.rs  slots.rs  species.rs  stats.rs  timing.rs  ui.rs
src/creature/: anatomy.rs  collection.rs  egg.rs  idle.rs  mod.rs  physics.rs  pose.rs  reactions.rs  reproduction.rs  rig.rs  spawn.rs  species.rs  touch.rs
src/creature/abilities/: mod.rs
src/creature/anatomy/: fat.rs  joints.rs  mod.rs  muscles.rs  skeleton.rs  skin.rs  species.rs  tick.rs
src/creature/behavior/: idle.rs  involuntary.rs  mod.rs  pose.rs  reactions.rs
src/creature/identity/: mod.rs  species.rs
src/creature/interaction/: impulse.rs  mod.rs  physics.rs  soft_body.rs  touch.rs  wobble.rs
src/creature/lifecycle/: collection.rs  egg.rs  mod.rs  spawn.rs
src/dev/: mod.rs  panels.rs  rig_gizmos.rs
src/game/: state.rs
src/genome/: color.rs  crossover.rs  mod.rs  species.rs
src/mind/: absence.rs  autonomic.rs  disease.rs  hygiene.rs  lifecycle.rs  mod.rs  neural.rs  nutrition.rs  plugin.rs  preferences.rs  training.rs
src/persistence/: db.rs  load.rs  mod.rs  plugin.rs  save.rs
src/systems/: animation.rs  body_parts.rs  creature.rs  creature_form.rs  creature_spawn.rs  effects.rs  evolution.rs  genome_visuals.rs  mod.rs  mood_sync.rs  pet.rs  rig.rs  sprite.rs  stats.rs  time_tick.rs  world.rs
src/systems/ui/: actions.rs
src/ui/: actions.rs  auth_screen.rs  creature_selector.rs  death_screen.rs  hud.rs  mod.rs  onboarding_screen.rs  side_menu.rs  style.rs  text_input.rs  title_screen.rs  vitals.rs
src/visuals/: accessories.rs  animation.rs  background.rs  breathing.rs  effects.rs  evolution.rs  genome_visuals.rs  mod.rs  mood_sync.rs  pixel_creature.rs  resonance_glow.rs  species_behavior.rs
src/visuals/pixel_creature/: mod.rs  moluun.rs  nyxal.rs  pylum.rs  skael.rs
src/visuals/skin/: mod.rs  moluun.rs  nyxal.rs  params.rs  pylum.rs  skael.rs
src/web/: auth.rs  mod.rs  sync.rs
src/world/: daycycle.rs  environment.rs  mod.rs  time_tick.rs
