[package]
name = "kokoro"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bincode = "2.0.1"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
