[package]
name = "kokoro"
version = "0.1.0"
edition = "2024"
description = "A virtual creature game where every Kobara is truly unique"
default-run = "kokoro"
authors = ["Edrick Alves Manoel"]

[features]
default = []
dev = ["dep:bevy_egui"]

[dependencies]
bevy    = { version = "0.16.1", features = ["wav"] }
bevy_egui = { version = "0.36", optional = true }
serde   = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
rand    = "0.9"
# Persistence — local SQLite for creature memory
rusqlite = { version = "0.31", features = ["bundled"] }
# Local time offset for day/night cycle (Unix only, safe no-op on other platforms)
libc     = "0.2"

# Image buffer for runtime pixel art rendering
image = { version = "0.25", default-features = false, features = ["png"] }

# Small optimization in dev builds for your own code
[profile.dev]
opt-level = 1

# Heavy optimization in dev builds for dependencies (speeds up Bevy compilation)
[profile.dev.package."*"]
opt-level = 3
