[package]
name = "kokoro-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = "0.8"
leptos_meta = "0.8"
leptos_router = "0.8"
leptos_axum = { version = "0.8", optional = true }
kokoro-shared = { path = "../../kokoro-shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage", "Location"] }
console_error_panic_hook = "0.1"

# Server-side dependencies
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "fs"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
argon2 = { version = "0.5", optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }
jsonwebtoken = { version = "9", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:rusqlite",
    "dep:argon2",
    "dep:rand_core",
    "dep:jsonwebtoken",
    "dep:chrono",
    "dep:uuid",
    "dep:reqwest",
]

[package.metadata.leptos]
output-name = "kokoro-ui"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "public"
site-addr = "0.0.0.0:3000"
reload-port = 3001
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
